--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(103, 72, 46, 0.863);
+}
+
 table {
   border-collapse: collapse;
   border: 1px solid #000;
@@ -26,4 +36,13 @@ td.pixel {
   height: 4px;
   width: 4px;
   border: 0;
+}
+
+.actions {
+  padding: 5px;
+}
+
+.actions button {
+  height: 25px;
+  width: 80px;
 }
