--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 100%;
+  width: 95vw;
   height: 100%;
   background-color: rgba(103, 72, 46, 0.863);
 }
